Use search endpoint in overview page
